grammar.txt
QUERY
  : PREFIX_LIST CONTEXT CONTEXT_SENSITIVE_QUERY

PREFIX_LIST
  : PREFIX PREFIX_LIST
  | <nothing>

PREFIX
  : @prefix NAME FULLY_SPECIFIED_URI

CONTEXT
  : IDENTIFIER

CONTEXT_SENSITIVE_QUERY
  : NODE_SPECIFIER TRAVERSAL

NODE_SPECIFIER
  : MATCHING_NODE_SPECIFIER
  | EMPTY_NODE_SPECIFIER

MATCHING_NODE_SPECIFIER
  : CONTEXT_TYPE ( MATCH_LIST )

EMPTY_NODE_SPECIFIER
  : <nothing>

CONTEXT_TYPE
  : SUBJECT_CONTEXT_TYPE
  | GRAPH_CONTEXT_TYPE

SUBJECT_CONTEXT_TYPE
  : <nothing>

GRAPH_CONTEXT_TYPE
  : =>

MATCH_LIST
  : MATCH MATCH_LIST
  | MATCH

MATCH
  : LEAF_MATCH
  | INTERMEDIATE_MATCH

LEAF_MATCH
  : PREDICATE VALUE

INTERMEDIATE_MATCH
  : PREDICATE NODE_SPECIFIER

PREDICATE
  : IDENTIFIER

TRAVERSAL
  : { DIRECTIVE_LIST }

DIRECTIVE_LIST
  : DIRECTIVE DIRECTIVE_LIST
  | DIRECTIVE

DIRECTIVE
  : SELECTOR

SELECTOR
  : LEAF_SELECTOR
  | INTERMEDIATE_SELECTOR

LEAF_SELECTOR
  : IDENTIFIER

INTERMEDIATE_SELECTOR
  : IDENTIFIER CONTEXT_SENSITIVE_QUERY

IDENTIFIER
  : URI
  | PREFIXED_URI

URI
  : <uri-regex>

PREFIXED_URI
  : NAME@LEGAL_URI_CHARSET

LEGAL_URI_CHARSET
  : <legal-uri-charset-regex>

NAME
  : [a-zA-Z]+[a-zA-Z0-9_-]+
